--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3378,12 +3378,12 @@ input, textarea, select {
 .container2 {
   white-space: nowrap;/* 确保文本在一行内显示，不换行 */
   width: 100%; /* 可以设置固定宽度或者百分比 */
-  height: 250px;
+  /* height: 250px; */
   animation: scroll 10s linear infinite; /* 应用滚动动画 */
 }
 .container1 {
   width: 100%; /* 可以设置固定宽度或者百分比 */
-  height: 280px;
+  /* height: 280px; */
   overflow: hidden;  /*隐藏超出容器的内容 */
 }
  
